# decaf

./: .gitignore  AUTHORS  Decaf.hs  LICENSE  README  buildscript  clean  decaf.cabal  decaf.hs  ir.hs  make  parser-bin  parser-bin.hs  parser.hs  scanner-bin  scanner-bin.hi  scanner-bin.hs  scanner-repl  scanner-repl.hi  scanner-repl.hs  scanner.hi  scanner.hs  scott-scanner.hs  test.hs  test_scanner.hs  testsript  tokens.hs
Decaf/: AST.hs  HIR.hs  Parser.hs  Root.hs  Scanner.hs  Tokens.hs  scott-scanner.hs
Testsuite/: Makefile~
Testsuite/Inputfiles/semantics/: illegal-04.dcf
doc/: checker.txt  codegen.design.txt  codegen.final.txt  codegen.writeup.txt  cse-01.after  cse-01.before  cse-02.after  cse-02.before  cse-02.dcf  cse-03.after  cse-03.before  cse-03.dcf  cse-04.after  cse-04.before  cse-04.dcf  cse-05.after  cse-05.before  cse-05.dcf  cse-06.after  cse-06.before  cse-06.dcf  cse-07.after  cse-07.before  cse-08.after  cse-08.before  cse-09.after  cse-09.before  cse-09.dcf  cse-10.after  cse-10.before  cse-11.after  cse-11.before  cse-12.after  cse-12.before  cse-12.dcf  cse-13.after  cse-13.before  cse-14.after  cse-14.before  cse-15.after  (+13 more)
docs/: checkerDOC.txt
scott/: make  parser.hs  scanner-output.hs  scanner.hs  test_inp  test_inp.out
src/: CheckerBin.hs  CompilerBin.hs  Decaf.hs  GrapherBin.hs  Loligoptl.hs  ParserBin.hs  ParserREPL.hs  ScannerBin.hs  ScannerREPL.hs  SemcheckBin.hs  TestOpt.hs  a  decaf.hs  ghci.dot  parser-bin.hs  parser.hs  scanner-bin.hs  scanner.hs  scott-parser.hs  test.c  test.c.hard  test.hs  todo.org  transform.hs
src/Decaf/: AST.hs  Assembler.hs  Checker.hs  HooplNodes.hs  InstructionSelector.hs  LIRNodes.hs  LIRTranslator.hs  LiveVars.hs  Parser.hs  RegisterAllocator.hs  SSA.hs  SSANodes.hs  SSATranslator.hs  Scanner.hs  Scanner.hs~  TRCSE.hs  TRCSEGlob.hs  TRConst.hs  TestChecker.hs  Tokens.hs  TransRewrite.hs  Translate.hs  Translator.hs  Util.hs
src/Decaf/Data/: ContextTree.hs  GraphTree.hs  SymbolTable.hs  Tree.hs  Zipper.hs
src/Decaf/IR/: ASM.hs  AST.hs  Class.hs  ControlFlowGraph.hs  ControlGraph.hs  IRNode.hs  LIR.hs  SSA.hs  SymbolTable.hs
src/Decaf/Passes/: CSE.hs  CodeMotion.hs  Const.hs  Constant.hs  Copy.hs  Dominator.hs  Live.hs  Peephole.hs  SSA.hs  Simplify.hs  Variable.hs
src/Decaf/RegisterAllocator/: ASMLiveVars.hs  ASMReachingDefs.hs  Allocator.hs  GraphASM.hs  IGraph.hs  LiveVars.hs  ReachingDefs.hs  TrivialPass.hs  UnionFind.hs
src/Decaf/Util/: InteractiveGrapher.hs  Prelude.hs  Report.hs  ZipCfg.hs
src/Loligoptl/: Checkpoint.hs  Collections.hs  Combinators.hs  Dataflow.hs  Fuel.hs  Graph.hs  GraphUtil.hs  Label.hs  Pointed.hs  Unique.hs  Util.hs
tests/gradingscripts/: p1grader.py
tests/scanner/: char1.out  char2.out  char3.out  char4.out  char5.out  char6.out  char7.out  char8.out  char9.out  hexlit1.out  hexlit2.out  hexlit3.out  id1.out  id2.out  id3.out  number1.out  number2.out  op1.out  op2.out  string1.out  string2.out  string3.out  tokens1.out  tokens2.out  tokens3.out  tokens4.out  ws1.out
tests/semantics/: illegal-14.dcf
tests/skeleton/: .gitignore  build.xml
testsuite/: Makefile  TODO  list  runtests.hs  runtests.sh
testsuite/Decaf/: ParserTests.hs  ScannerTests.hs  SemcheckerTests.hs
testsuite/Decaf/outdated/: testParser.hs
testsuite/Test/: Makefile  dummyCompiler.hs   testParser.hs  testScanner.hs  testSemanticsChecker.hs  testSemchecker.hs
testsuite/Test/Gentest/: ParserBin-outputshow.hs
testsuite/Test/HUnit/: Lang.hs
testsuite/Test/in/: show.hs
testsuite/Test/outdated/: Makefile  runtests.hs
testsuite/in/: run.sh
testsuite/in/coge/: 00-empty.dcf  01-callout.dcf  02-expr.dcf  03-math.dcf  04-math2.dcf  05-calls.dcf  06-control-flow.dcf  07-recursion.dcf  08-array.dcf  09-global.dcf  10-bounds.dcf  11-big-array.dcf  12-huge.dcf  13-ifs.dcf  14-shortcircuit.dcf  15-not.dcf  buildscript  cmpscript  cse-10.dcf  cse-16.dcf  cse-17.dcf  cse-18.dcf  exprchar.dcf  exprprece2.dcf  exprremi.dcf  fib2.dcf  l  legal-01.dcf  legal-03.dcf  nqueens.dcf  passing2.dcf  shortcir2.dcf  testscript
testsuite/in/coge-illegal2/: illegal-01.dcf  illegal-02.dcf  illegal-03.dcf  illegal-04.dcf
testsuite/in/coge2/: exprloca.dcf  exprprece.dcf  exprprece3.dcf  initialize.dcf  initialize2.dcf  l  legal-01.dcf  legal-02.dcf  legal-03.dcf  loop.dcf  loop2.dcf  passing.dcf  shortcir.dcf
testsuite/in/coge3/: fac.dcf  fac.out  fib.dcf  fib2.dcf  fib2.out  gcd.dcf  gcd.out  l  nqueens.out  shape.dcf  shape.out
testsuite/in/dataflow/: cse-01.dcf  cse-07.dcf  cse-08.dcf  cse-11.dcf  cse-13.dcf  cse-14.dcf  cse-15.dcf
testsuite/in/pars-illegal/: illegal-21.dcf  illegal-22.dcf  illegal-23.dcf  illegal-24.dcf  illegal-25.dcf  illegal-26.dcf  illegal-27.dcf  illegal-28.dcf  illegal-29.dcf  illegal-30.dcf  illegal-31.dcf  illegal-32.dcf  illegal-33.dcf  illegal-34.dcf  illegal-35.dcf  illegal-36.dcf  illegal-37.dcf  illegal-38.dcf  illegal-39.dcf  illegal-40.dcf  illegal-41.dcf
testsuite/in/pars-illegal2/: illegal-01.dcf  illegal-02.dcf  illegal-03.dcf  illegal-04.dcf  illegal-06.dcf  illegal-07.dcf  illegal-09.dcf
testsuite/in/pars-legal/: legal-21.dcf  legal-22.dcf  legal-23.dcf  legal-24.dcf  legal-25.dcf  legal-26.dcf  legal-27.dcf  legal-28.dcf  legal-29.dcf  legal-30.dcf  legal-31.dcf
testsuite/in/scan-illegal/: l
testsuite/in/scan-legal/: id5  l  tokens6  variants
testsuite/in/semi-illegal/: illegal-01.dcf  illegal-02.dcf  illegal-03.dcf  illegal-04.dcf  illegal-05.dcf  illegal-06.dcf  illegal-07.dcf  illegal-08.dcf  illegal-09.dcf  illegal-10.dcf  illegal-11.dcf  illegal-12.dcf  illegal-13.dcf  illegal-14.dcf  illegal-15.dcf  illegal-16.dcf  illegal-17.dcf  illegal-18.dcf  illegal-19.dcf  illegal-20.dcf  illegal-21.dcf  illegal-22.dcf  illegal-23.dcf  illegal-24.dcf  illegal-25.dcf  illegal-26.dcf  illegal-27.dcf  illegal-28.dcf  illegal-29.dcf  illegal-30.dcf  illegal-31.dcf  illegal-32.dcf  illegal-33.dcf  illegal-34.dcf  illegal-35.dcf  illegal-36.dcf  illegal-37.dcf  illegal-38.dcf  illegal-39.dcf  (+13 more)
testsuite/tests/: AST.hs  Makefile  testScanner.hs  testSemchecker.hs
(+136 files in other folders)
