name:               decaf
version:            0.0.1
homepage:           http://
synopsis:           The laziest compiler ever
description:
    blah blah blah blah blah blah blah blah blah blah blah blah
    blah blah blah blah blah blah blah blah blah blah blah blah
category:           System
license:            MIT
license-file:       LICENSE
author:             Raeez Lorgat, Scott Kovach, Justin Zhang
maintainer:         raeez@mit.edu
extra-source-files: README LICENCSE
cabal-version:      >= 1.2
build-type:         Simple
tested-with:        GHC == 6.12.3
Hs-Source-Dirs:     src/


flag testing
    description: Testing mode, only build minimal components
    default: False

executable scanner
    main-is:            src/ScannerBin.hs
    other-modules:      Decaf
                        Decaf.Tokens
                        Decaf.AST
                        Decaf.Scanner
                        Decaf.Parser

    Build-Depends:      base, parsec, regex-posix

    if true 
        ghc-options:    -funbox-strict-fields -Wall

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror


executable parser
    main-is:            src/ParserBin.hs
    other-modules:      Decaf
                        Decaf.Tokens
                        Decaf.AST
                        Decaf.Scanner
                        Decaf.Parser

    Build-Depends:      base, parsec, regex-posix

    if true 
        ghc-options:    -funbox-strict-fields -Wall

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror


executable scanner-repl
    main-is:            src/ScannerREPL.hs
    other-modules:      Decaf
                        Decaf.Tokens
                        Decaf.AST
                        Decaf.Scanner
                        Decaf.Parser

    Build-Depends:      base, parsec, regex-posix
    if true 
        ghc-options:    -funbox-strict-fields -Wall

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror


executable test
    main-is:            testsuite/Test/testScanner.hs
    other-modules:      Decaf
                        Decaf.Tokens
                        Decaf.AST
                        Decaf.Scanner
                        Decaf.Parser

    build-depends:  base, parsec, regex-posix, hunit


    if flag(testing)
        hs-source-dirs: . Decaf/ testsuite/Test
        ghc-options:    -Werror -v
        buildable:      True
    else
        buildable:      False

    if true 
        ghc-options:    -funbox-strict-fields -Wall
    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind
    ghc-prof-options:   -prof -auto-all



