name:               decaf
version:            0.0.1
homepage:           http://
synopsis:           The laziest compiler ever
description:
    blah blah blah blah blah blah blah blah blah blah blah blah
    blah blah blah blah blah blah blah blah blah blah blah blah
category:           System
license:            MIT
license-file:       LICENSE
author:             Raeez Lorgat, Scott Kovach, Justin Zhang
maintainer:         raeez@mit.edu
extra-source-files: README LICENCSE
cabal-version:      >= 1.2
build-type:         Simple
tested-with:        GHC == 6.12.3


flag testing
    description: Testing mode, only build minimal components
    default: False

executable scanner
    hs-source-dirs:     src/

    main-is:            ScannerBin.hs
    other-modules:      Decaf
                        Decaf.Tokens
                        Decaf.AST
                        Decaf.Scanner
                        Decaf.Parser

    Build-Depends:      base, parsec, regex-posix,  graphviz

    if true 
        ghc-options:    -funbox-strict-fields -Wall

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror


executable parser
    hs-source-dirs:     src/

    main-is:            ParserBin.hs
    other-modules:      Decaf
                        Decaf.Tokens
                        Decaf.AST
                        Decaf.Scanner
                        Decaf.Parser

    Build-Depends:      base, parsec, regex-posix,  graphviz

    if true 
        ghc-options:    -funbox-strict-fields -Wall

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror


executable scanner-repl
    hs-source-dirs:     src/

    main-is:            ScannerREPL.hs
    other-modules:      Decaf
                        Decaf.Tokens
                        Decaf.AST
                        Decaf.Scanner
                        Decaf.Parser

    Build-Depends:      base, parsec, regex-posix,  graphviz
    if true 
        ghc-options:    -funbox-strict-fields -Wall

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror



executable grapher
    hs-source-dirs:     src/

    main-is:            GrapherBin.hs
    other-modules:      Decaf
                        Decaf.Tokens
                        Decaf.AST
                        Decaf.Scanner
                        Decaf.Parser

    Build-Depends:      base, parsec, regex-posix, fgl, graphviz, mtl, process

    if true 
        ghc-options:    -funbox-strict-fields -Wall

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror


executable checker
    hs-source-dirs:     src/

    main-is:            CheckerBin.hs
    other-modules:      Decaf
                        Decaf.Tokens
                        Decaf.AST
                        Decaf.Scanner
                        Decaf.Parser
                        Decaf.Checker

    Build-Depends:      base, haskell98

    if true 
        ghc-options:    -funbox-strict-fields -Wall

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror

