name:               decaf
version:            0.0.1
homepage:           http://
synopsis:           The laziest compiler ever
description:
    blah blah blah blah blah blah blah blah blah blah blah blah
    blah blah blah blah blah blah blah blah blah blah blah blah
category:           System
license:            MIT
license-file:       LICENSE
author:             Raeez Lorgat, Scott Kovach, Justin Zhang
maintainer:         raeez@mit.edu
extra-source-files: README LICENCSE
cabal-version:      >= 1.8
build-type:         Simple
tested-with:        GHC == 6.12.3


flag testing
    description: Testing mode, only build minimal components
    default: False


Library
    hs-source-dirs: src/	

    Build-Depends:  HUnit, graphviz, parsec, base > 4, regex-posix, fgl, mtl, process, QuickCheck
    Exposed-Modules:  Decaf, Decaf.Tokens, Decaf.IR.AST, Decaf.IR.LIR, Decaf.Scanner, Decaf.Parser, Decaf.Checker, Decaf.Data.Zipper, Decaf.IR.SymbolTable, Decaf.Data.Tree, Decaf.Data.GraphTree, Decaf.Util.Prelude, Decaf.Util.InteractiveGrapher, Decaf.Util.Report, Decaf.IR.Class, Decaf.IR.ControlFlowGraph, Decaf.Translator

    Other-Modules: Decaf.Data.ContextTree

executable scanner
    hs-source-dirs:     src/


    main-is:            ScannerBin.hs
    other-modules:      Decaf

    Build-Depends:      base > 4, parsec, regex-posix,  graphviz, QuickCheck

    if true 
        ghc-options:    -Wall -fno-warn-name-shadowing

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror


executable parser
    hs-source-dirs:     src/

    main-is:            ParserBin.hs
    other-modules:      Decaf

    Build-Depends:      base > 4, parsec, regex-posix,  graphviz, QuickCheck

    if true 
        ghc-options:    -Wall -fno-warn-name-shadowing

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror


executable scanner-repl
    hs-source-dirs:     src/

    main-is:            ScannerREPL.hs
    other-modules:      Decaf

    Build-Depends:      base > 4, parsec, regex-posix,  graphviz, QuickCheck
    if true 
        ghc-options:    -Wall -fno-warn-name-shadowing

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror



executable grapher
    hs-source-dirs:     src/

    main-is:            GrapherBin.hs
    other-modules:      Decaf

    Build-Depends:      base > 4, parsec, regex-posix, fgl, graphviz, mtl, process, QuickCheck

    if true 
        ghc-options:    -Wall -fno-warn-name-shadowing

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror


executable checker
    hs-source-dirs:     src/

    main-is:            CheckerBin.hs
    other-modules:      Decaf

    Build-Depends:      base > 4, parsec, regex-posix, haskell98, QuickCheck

    if true 
        ghc-options:    -Wall -fno-warn-name-shadowing

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror

executable runtests
    hs-source-dirs:     testsuite/

    main-is:            runtests.hs
    other-modules:      Decaf

    Hs-Source-Dirs:     src



    Build-Depends:      base > 4, parsec, regex-posix, graphviz, HUnit, process, containers, QuickCheck
    if true 
        ghc-options:    -Wall -fno-warn-name-shadowing

    if impl(ghc >= 6.12.1)
        ghc-options:    -fno-warn-unused-do-bind

    ghc-prof-options:   -prof -auto-all
    extensions:         CPP

    if flag(testing)
        cpp-options:    -DTESTING
        hs-source-dirs: . tests/
        build-depends:  QuickCheck < 2
        ghc-options:    -Werror

